# cpp

./: .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  ev_vsomeip.sh  final-script.sh  final-script.txt  readme_to_install_cpp_application.txt  setup_vsomeip.sh
certificates/: b_certificate.pem.crt  b_private.pem.key  b_public.pem.key  certificate.pem.crt  java-certificate.pem.crt  java-private.pem.key  java-public.pem.key  jsonstruc (1).hpp  new-certificate.pem.crt  new-private.pem.key  new-public.pem.key  private.pem.key  public.pem.key  s_certificate.pem.crt  s_private.pem.key  s_public.pem.key  vsomeipsteps_Mine
config/: cardata.json  vsomeip-local-client.json
include/: AwsPublisher.h  accelerator_pojo.h  cluster.h  gear_pojo.h  ignition_pojo.h  image_pojo.h  mode_pojo.h  proper_cache.hpp  sample-ids.hpp  serdes.hpp  soc_pojo.h  someipdata.h
src/: VehicleData_consumer_aws.cpp
